# oiuc-v2

./: .gitignore  CMakeLists.txt  Makefile  Makefile.quy  README.md  autoinsert.sh  build_qml.sh  custom.mk  oiuc.qrc  qml.qrc  qml.qrc.template  test_oiuc
configtools/: config-change  config-view  config-view.sqlite3
databases/: oiuc.db  oiuc.db.new  oiuc.db.origin
include/: Config.h  Hotline.h  Log.h  OIU.h  OIUC.h  OIUList.h  PTTButton.h  Radio.h  RadioList.h  SoundDevice.h  backend.h  ctocpp.h
qml/: AboutDialog.qml  Application.qml  CallDialog.qml  CppLinkage.qml  DialogCommon.qml  HotlineView.qml  Key.qml  LabelCommon.qml  LoginAboutDialog.qml  ManageUserDialog.qml  MenuSettings.qml  ModelHotline.qml  ModelOIUs.qml  ModelPSTN.qml  ModelRadios.qml  ModelSoundDevice.qml  ModelUser.qml  MySlider.qml  NumberLCD.qml  OIUView.qml  PSTNView.qml  PanelCommon.qml  PanelHotline.qml  PanelMain.qml  PanelPSTN.qml  PanelRight.qml  PanelTop.qml  PushButton.qml  PushIconTextButton.qml  PushTextButton.qml  QmlConfig.js  RadioView.qml  ScrollBar.qml  SoundDevice.qml  TelephoneKeyboard.qml  ToggleButton.qml  ToggleKey.qml  ToggleTextButton.qml  VirtualKeyboard.qml  VolumeControl.qml  (+1 more)
src/: Config.cpp  Hotline.cpp  Log.cpp  OIU.cpp  OIUC.cpp  OIUList.cpp  PTTButton.cpp  Radio.cpp  RadioList.cpp  SoundDevice.cpp  backend.cpp  ctocpp.cpp  main.cpp  note.txt  oiuc.c
